--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "expo": "~49.0.15",
     "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-mssql": "^0.1.4",
     "react-native-picker-select": "^8.1.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4"
