--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@stripe/stripe-js": "^2.2.0",
+    "@stripe/stripe-react-native": "^0.35.0",
     "expo": "~49.0.15",
     "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "~1.6.0",
